--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -7,7 +7,7 @@
     "# !cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
     "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
     "!apt update\n",
-    "!apt install tmux -y\n",
+    "!apt install tmux apt-utils vim -y\n",
     "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
@@ -46,13 +46,6 @@
    "metadata": {},
    "source": [
     "!cd /workspace/data && curl -X GET \"https://api.finra.org/data/group/finra/name/finraRulebookMock?offset=0&limit=10000&delimiter=%2C&quoteValues=true&async=false&access_token=ae4bfc7741084e2c9944\" -H  \"accept: application/json\" -H  \"Content-Type: application/json\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!apt-get update && apt-get install apt-utils vim -y"
    ]
   },
   {
@@ -111,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,15 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rule_and_description(document):\n",
-    "    first_split = document.metadata['description'].split(\"  \")\n",
-    "    rule = first_split[0].split()[-1].strip()\n",
-    "    rule_description = first_split[-1].strip()\n",
-    "    return rule, rule_description\n",
+    "\n",
     "\n",
     "def get_tree_data(element, depth=0, list_depth=0, prev_depth=-1, lists=None, final_dict=None):\n",
     "    if lists is None:\n",
@@ -191,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LLMMetadata(context_window=128000, num_output=256, is_chat_model=True, is_function_calling_model=False, model_name='llama3.1', system_role=<MessageRole.SYSTEM: 'system'>)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "from llama_index.llms.ollama import Ollama\n",
@@ -214,7 +214,7 @@
     "\n",
     "# system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any rule or regulation codes (e.g. § 230.503, Rule 501(a)) from context that support the answer:\"\n",
     "# llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt, context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False)\n",
-    "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False, request_timeout=240.0)\n",
+    "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False, request_timeout=500.0)\n",
     "llm.metadata"
    ]
   },
@@ -228,9 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os, dotenv\n",
     "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
@@ -239,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_metadata(s, metadata={\"title\":None, \"chapter\":None, \"part\":None, \"subpart\":None, \"description\":None}):\n",
+    "def get_metadata(s, metadata={\"title\":None, \"chapter\":None, \"part\":None, \"subpart\":None, \"section\":None, \"description\":None}):\n",
     "    s_split = s[2:-2].split(\"', '\")\n",
     "    key_lengths = {key: len(key) for key in metadata}\n",
     "    for x in s_split:\n",
@@ -255,46 +266,53 @@
     "                    metadata[key] = x\n",
     "                    break\n",
     "    metadata[\"description\"] = s_split[-1]\n",
-    "    return metadata"
+    "    metadata[\"section\"] = s_split[-1].split(\"  \")[0].strip()\n",
+    "    return metadata\n",
+    "\n",
+    "def get_rule_and_description(document):\n",
+    "    first_split = document.metadata['description'].split(\"  \")\n",
+    "    rule = first_split[0].strip()#.split()[-1].strip()\n",
+    "    rule_description = first_split[-1].strip()\n",
+    "    return rule, rule_description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Literal\n",
-    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
-    "\n",
-    "entities = Literal[\"RULE\", \"REGULATION\", \"LAW_OR_ACT\"]\n",
-    "relations = Literal[\n",
-    "    \"RELATED_TO\",\n",
-    "    \"MENTIONED_BY\",\n",
-    "    \"MENTIONS\",\n",
-    "    \"REFERENCED_BY\",\n",
-    "    \"REFERS_TO\",\n",
-    "]\n",
-    "all_relations = [\n",
-    "    \"RELATED_TO\",\n",
-    "    \"MENTIONED_BY\",\n",
-    "    \"MENTIONS\",\n",
-    "    \"REFERENCED_BY\",\n",
-    "    \"REFERS_TO\",\n",
-    "]\n",
-    "\n",
-    "validation_schema = {\n",
-    "    \"Rule\": all_relations,\n",
-    "    \"Regulation\": all_relations,\n",
-    "    \"Out_of_dataset_law_or_act\": [\"MENTIONED_BY\",\"REFERENCED_BY\",\"RELATED_TO\"],\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/pydantic/_internal/_fields.py:161: UserWarning: Field \"model_id\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading embed model...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c9aa3cb7a9143fca00d99ba4a2671d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -340,29 +358,86 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "documents = [Document(text=t, \n",
-    "                    metadata=get_metadata(m, metadata={\"description\":None}),\n",
-    "                    excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
-    "subset_docs = documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40]\n",
-    "NUMBER_OF_ARTICLES = 1090\n",
-    "pos_ent, pos_rel = [], []\n",
-    "for doc in subset_docs:\n",
-    "    rule, rule_description = get_rule_and_description(doc)\n",
-    "    pos_ent.append(rule)\n",
-    "    pos_rel.append(rule_description)"
+    "from typing import Literal\n",
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
+    "\n",
+    "entities = Literal[\"SECTION\"]#, \"REGULATION\"]\n",
+    "relations = Literal[\n",
+    "    \"RELATED_TO\",\n",
+    "    # \"MENTIONED_BY\",\n",
+    "    \"MENTIONS\",\n",
+    "    \"REFERENCED_BY\",\n",
+    "    \"REFERS_TO\",\n",
+    "]\n",
+    "all_relations = [\n",
+    "    \"RELATED_TO\",\n",
+    "    # \"MENTIONED_BY\",\n",
+    "    \"MENTIONS\",\n",
+    "    \"REFERENCED_BY\",\n",
+    "    \"REFERS_TO\",\n",
+    "]\n",
+    "\n",
+    "validation_schema = {\n",
+    "    \"Section\": all_relations,\n",
+    "    # \"Rule\": all_relations,\n",
+    "    # \"Act\": [\"MENTIONED_BY\",\"REFERENCED_BY\"],\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Received notification from DBMS server: {severity: WARNING} {code: Neo.ClientNotification.Statement.FeatureDeprecationWarning} {category: DEPRECATION} {title: This feature is deprecated and will be removed in future versions.} {description: The procedure has a deprecated field. ('config' used by 'apoc.meta.graphSample' is deprecated.)} {position: line: 1, column: 1, offset: 0} for query: \"CALL apoc.meta.graphSample() YIELD nodes, relationships RETURN nodes, [rel in relationships | {name:apoc.any.property(rel, 'type'), count: apoc.any.property(rel, 'count')}] AS relationships\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data to vector store...\n",
+      "    building from scratch...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd3afde1c2df4871b2b2e2fa757b09d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Parsing nodes:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting paths from text with schema: 100%|██████████| 61/61 [02:28<00:00,  2.44s/it]\n",
+      "Generating embeddings:   0%|          | 0/7 [00:00<?, ?it/s]We detected that you are passing `past_key_values` as a tuple and this is deprecated and will be removed in v4.43. Please use an appropriate `Cache` class (https://huggingface.co/docs/transformers/v4.41.3/en/internal/generation_utils#transformers.Cache)\n",
+      "Generating embeddings: 100%|██████████| 7/7 [00:05<00:00,  1.31it/s]\n",
+      "Generating embeddings: 100%|██████████| 7/7 [00:01<00:00,  3.50it/s]\n",
+      "Received notification from DBMS server: {severity: WARNING} {code: Neo.ClientNotification.Statement.FeatureDeprecationWarning} {category: DEPRECATION} {title: This feature is deprecated and will be removed in future versions.} {description: The procedure has a deprecated field. ('config' used by 'apoc.meta.graphSample' is deprecated.)} {position: line: 1, column: 1, offset: 0} for query: \"CALL apoc.meta.graphSample() YIELD nodes, relationships RETURN nodes, [rel in relationships | {name:apoc.any.property(rel, 'type'), count: apoc.any.property(rel, 'count')}] AS relationships\"\n"
+     ]
+    }
+   ],
    "source": [
     "print('loading data to vector store...')\n",
-    "persist_dir = \"/workspace/data/storage/sec\"\n",
+    "persist_dir = \"/workspace/data/storage/sec_baseline\"\n",
     "\n",
     "if os.path.exists(persist_dir):\n",
     "    print(f'    loading from {persist_dir}...')\n",
@@ -373,29 +448,30 @@
     "else:\n",
     "    print(f'    building from scratch...')\n",
     "    documents = [Document(text=t, \n",
-    "                        metadata=get_metadata(m, metadata={\"description\":None}),\n",
-    "                        excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
+    "                        metadata=get_metadata(m, metadata={\"section\":None, \"description\":None})) for m,t in data.items()]\n",
+    "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    # extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 13d-3(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities 'RULES, REGULATIONS' and the relationships 'REFERENCED_BY, REFERS_TO'.\"\n",
-    "    extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 13d-3(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships, along with any out-of-dataset laws or acts mentioned.\"\n",
+    "    # extract_prompt = \"Many of the sections (e.g. § 230.503, § 240.13a-15) and rules (e.g. Rule 13d-3(a), Rule 13d-1(f)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships, focusing on the sections mentioned in the text.\"\n",
+    "    extract_prompt = \"Many of the sections (e.g. 230.503, 240.13a-15) in the text mention other sections. Extract up to {max_triplets_per_chunk} section mentiones per chunck. Only extract the sections mentioned in the text.\"\n",
     "    \n",
     "    import random\n",
     "    from llama_index.core import PropertyGraphIndex\n",
-    "    linked = ['240.13a-15',\n",
-    "    '229.1101',\n",
-    "    '239.24',\n",
-    "    '274.5',\n",
-    "    '270.30',\n",
-    "    '240.13h-1',\n",
-    "    '242.600']\n",
+    "    linked = ['§ 240.13a-15',\n",
+    "    '§ 229.1101',\n",
+    "    '§ 239.24',\n",
+    "    '§ 274.5',\n",
+    "    '§ 270.30',\n",
+    "    '§ 240.13h-1',\n",
+    "    '§ 242.600']\n",
     "    doc_linked = []\n",
     "    for doc in documents:\n",
     "        rule, rule_description = get_rule_and_description(doc)\n",
     "        for linked_rule in linked:\n",
     "            if rule in linked_rule:\n",
     "                doc_linked.append(doc)\n",
-    "    doc_linked+=random.sample(documents, 20)\n",
-    "    len(doc_linked)\n",
-    "    # NUMBER_OF_ARTICLES = 1090\n",
+    "    doc_linked+=random.sample(documents, 3)\n",
+    "\n",
+    "    NUMBER_OF_ARTICLES = 1090\n",
     "    pos_ent, pos_rel = [], []\n",
     "    for doc in doc_linked:\n",
     "        rule, rule_description = get_rule_and_description(doc)\n",
@@ -412,7 +488,7 @@
     "        kg_validation_schema=validation_schema,\n",
     "        max_triplets_per_chunk=10,\n",
     "        num_workers=4,\n",
-    "        strict=False\n",
+    "        strict=True\n",
     "        )\n",
     "\n",
     "    # from llama_index.core.indices.property_graph import DynamicLLMPathExtractor\n",
@@ -427,13 +503,14 @@
     "\n",
     "    # from llama_index.core.indices.property_graph import SimpleLLMPathExtractor\n",
     "\n",
+    "    # extract_prompt = \"Many of the sections (e.g. § 230.503, § 240.13a-15) in the text mention other sections. Extract up to {max_paths_per_chunk} section mentiones per chunck. Only extract the sections mentioned in the text.\"\n",
     "    # kg_extractor = SimpleLLMPathExtractor(\n",
     "    #     llm=llm,\n",
     "    #     max_paths_per_chunk=10,\n",
     "    #     num_workers=10,\n",
     "    # )\n",
     "\n",
-    "    NUMBER_OF_ARTICLES = 1090\n",
+    "    # NUMBER_OF_ARTICLES = 1090\n",
     "\n",
     "    neo_url = \"bolt://localhost:7687\"\n",
     "    config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000}\n",
@@ -441,7 +518,7 @@
     "        username=\"neo4j\",\n",
     "        password=os.getenv(\"NEO4J_PWD\"),\n",
     "        url=neo_url,\n",
-    "        database=\"neo4j_2\",\n",
+    "        database=\"neo4j\",\n",
     "        **config\n",
     "    )\n",
     "\n",
@@ -453,7 +530,7 @@
     "                                                     show_progress=True)\n",
     "    \n",
     "    # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model, show_progress=True)\n",
-    "    vector_index.storage_context.persist(persist_dir=persist_dir)\n",
+    "    # vector_index.storage_context.persist(persist_dir=persist_dir)\n",
     "\n",
     "# query_engine = vector_index.as_retriever(similarity_top_k=3)\n",
     "query_engine = vector_index.as_query_engine(similarity_top_k=3)\n"
@@ -463,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Connect to `bolt://localhost:7687` and enter neo4j password"
+    "Connect to `neo4j://localhost:7687` and enter neo4j password"
    ]
   },
   {
@@ -472,8 +549,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Neo4jPropertyGraphStore?"
+    "# MATCH (n) WHERE n.description = \"§ 240.13a-15   Controls and procedures.\" RETURN n\n",
+    "\n",
+    "# MATCH (n) DETACH DELETE n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
