--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -53,18 +53,18 @@
    "metadata": {},
    "source": [
     "\n",
-    "!apt-get update\n",
+    "!apt update\n",
     "!DEBIAN_FRONTEND=\"noninteractive\"\n",
-    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg -y\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
-    "!apt-get list -a neo4j\n",
+    "!apt list -a neo4j\n",
     "!add-apt-repository universe -y\n",
-    "!apt-get install neo4j=1:5.22.0 -y\n",
+    "!apt install neo4j=1:5.22.0 -y\n",
     "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
     "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
-    "!apt-get remove openjdk-21-jre-headless -y\n",
-    "!apt-get install openjdk-17-jre -y\n",
+    "!apt remove openjdk-21-jre-headless -y\n",
+    "!apt install openjdk-17-jre -y\n",
     "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
    ]
   },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,9 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LLMMetadata(context_window=128000, num_output=256, is_chat_model=True, is_function_calling_model=False, model_name='llama3.1', system_role=<MessageRole.SYSTEM: 'system'>)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "from llama_index.llms.ollama import Ollama\n",
@@ -217,9 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os, dotenv\n",
     "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
@@ -228,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,21 +266,59 @@
     "                    metadata[key] = x\n",
     "                    break\n",
     "    metadata[\"description\"] = s_split[-1]\n",
-    "    metadata[\"section\"] = s_split[-1].split(\"  \")[0].strip()\n",
+    "    metadata[\"section\"] = s_split[-1].split(\"  \")[0]#.split(\" \")[-1].strip()\n",
     "    return metadata\n",
     "\n",
     "def get_rule_and_description(document):\n",
     "    first_split = document.metadata['description'].split(\"  \")\n",
     "    rule = first_split[0].strip()#.split()[-1].strip()\n",
     "    rule_description = first_split[-1].strip()\n",
-    "    return rule, rule_description"
+    "    return rule, rule_description\n",
+    "\n",
+    "import re\n",
+    "def get_linked_sections(doc):\n",
+    "    pattern = r'§\\s?\\d+\\.\\d+[a-zA-Z-]*\\d*'\n",
+    "    linked_sections = re.findall(pattern, doc.text)\n",
+    "    return linked_sections\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/pydantic/_internal/_fields.py:161: UserWarning: Field \"model_id\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading embed model...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b66125ed73864eec9fe35caa60dd5dc0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -305,25 +365,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Literal\n",
     "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
     "\n",
-    "entities = Literal[\"SECTION\"]#, \"REGULATION\"]\n",
+    "# entities = Literal[\"SECTION\", \"RULE\", \"ACT\"]\n",
+    "entities = Literal[\"SECTION\"]\n",
     "relations = Literal[\n",
     "    \"RELATED_TO\",\n",
     "    # \"MENTIONED_BY\",\n",
-    "    \"MENTIONS\",\n",
+    "    # \"MENTIONS\",\n",
     "    \"REFERENCED_BY\",\n",
     "    \"REFERS_TO\",\n",
     "]\n",
     "all_relations = [\n",
     "    \"RELATED_TO\",\n",
     "    # \"MENTIONED_BY\",\n",
-    "    \"MENTIONS\",\n",
+    "    # \"MENTIONS\",\n",
     "    \"REFERENCED_BY\",\n",
     "    \"REFERS_TO\",\n",
     "]\n",
@@ -331,15 +392,56 @@
     "validation_schema = {\n",
     "    \"Section\": all_relations,\n",
     "    # \"Rule\": all_relations,\n",
-    "    # \"Act\": [\"MENTIONED_BY\",\"REFERENCED_BY\"],\n",
+    "    # \"Act\": [\"MENTIONED_BY\"]\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Received notification from DBMS server: {severity: WARNING} {code: Neo.ClientNotification.Statement.FeatureDeprecationWarning} {category: DEPRECATION} {title: This feature is deprecated and will be removed in future versions.} {description: The procedure has a deprecated field. ('config' used by 'apoc.meta.graphSample' is deprecated.)} {position: line: 1, column: 1, offset: 0} for query: \"CALL apoc.meta.graphSample() YIELD nodes, relationships RETURN nodes, [rel in relationships | {name:apoc.any.property(rel, 'type'), count: apoc.any.property(rel, 'count')}] AS relationships\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data to vector store...\n",
+      "    building from scratch...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c500d205ca754d2bad85b0e0522af016",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Parsing nodes:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting paths from text with schema: 100%|██████████| 49/49 [03:55<00:00,  4.80s/it]\n",
+      "Generating embeddings:   0%|          | 0/5 [00:00<?, ?it/s]We detected that you are passing `past_key_values` as a tuple and this is deprecated and will be removed in v4.43. Please use an appropriate `Cache` class (https://huggingface.co/docs/transformers/v4.41.3/en/internal/generation_utils#transformers.Cache)\n",
+      "Generating embeddings: 100%|██████████| 5/5 [00:04<00:00,  1.25it/s]\n",
+      "Generating embeddings: 100%|██████████| 7/7 [00:01<00:00,  3.67it/s]\n",
+      "Received notification from DBMS server: {severity: WARNING} {code: Neo.ClientNotification.Statement.FeatureDeprecationWarning} {category: DEPRECATION} {title: This feature is deprecated and will be removed in future versions.} {description: The procedure has a deprecated field. ('config' used by 'apoc.meta.graphSample' is deprecated.)} {position: line: 1, column: 1, offset: 0} for query: \"CALL apoc.meta.graphSample() YIELD nodes, relationships RETURN nodes, [rel in relationships | {name:apoc.any.property(rel, 'type'), count: apoc.any.property(rel, 'count')}] AS relationships\"\n"
+     ]
+    }
+   ],
    "source": [
     "print('loading data to vector store...')\n",
     "persist_dir = \"/workspace/data/storage/sec_baseline\"\n",
@@ -353,11 +455,16 @@
     "else:\n",
     "    print(f'    building from scratch...')\n",
     "    documents = [Document(text=t, \n",
-    "                        metadata=get_metadata(m, metadata={\"section\":None, \"description\":None})) for m,t in data.items()]\n",
+    "                          text_template = '{content}',\n",
+    "                        #   text_template = '{metadata_str}\\n\\nCONTEXT:\\n{content}',\n",
+    "                          metadata=get_metadata(m, metadata={\"section\":None, \"description\":None})) \\\n",
+    "                            for m,t in data.items()]\n",
     "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    # extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 13d-3(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities 'RULES, REGULATIONS' and the relationships 'REFERENCED_BY, REFERS_TO'.\"\n",
     "    # extract_prompt = \"Many of the sections (e.g. § 230.503, § 240.13a-15) and rules (e.g. Rule 13d-3(a), Rule 13d-1(f)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships, focusing on the sections mentioned in the text.\"\n",
-    "    extract_prompt = \"Many of the sections (e.g. 230.503, 240.13a-15) in the text mention other sections. Extract up to {max_triplets_per_chunk} section mentiones per chunck. Only extract the sections mentioned in the text.\"\n",
+    "    # extract_prompt = \"A section in the Many of the sections (e.g. 230.503, 240.13a-15) in the text mention other sections. Extract up to {max_triplets_per_chunk} section mentiones per chunck. Only extract the sections mentioned in the text.\"\n",
+    "    # extract_prompt = \"A section, rule, or act in Title 17 rulebook is an alphaumeric string with punctuation (e.g. 230.503, 240.13a-15, Rule 13d-1(f), Investment Company Act of 1940 (15 U.S.C. 80a-8)). Many of the sections in the text mention other sections, rules, or acts. Extract up to {max_triplets_per_chunk} section mentiones knowledge triples per chunk. Only extract the sections, rules, and acts mentioned in the context.\"\n",
+    "    extract_prompt = \"What sections (e.g. § 230.503, § 240.13a-15) are mentioned in the content? Return only sections in the context.\"\n",
     "    \n",
     "    import random\n",
     "    from llama_index.core import PropertyGraphIndex\n",
@@ -379,9 +486,11 @@
     "    NUMBER_OF_ARTICLES = 1090\n",
     "    pos_ent, pos_rel = [], []\n",
     "    for doc in doc_linked:\n",
-    "        rule, rule_description = get_rule_and_description(doc)\n",
-    "        pos_ent.append(rule)\n",
-    "        pos_rel.append(rule_description)\n",
+    "        section = get_linked_sections(doc)\n",
+    "        pos_ent+=section\n",
+    "        # rule, rule_description = get_rule_and_description(doc)\n",
+    "        # pos_ent.append(rule)\n",
+    "        # pos_rel.append(rule_description)\n",
     "\n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
@@ -389,7 +498,7 @@
     "        possible_entities=entities,\n",
     "        possible_relations=relations,\n",
     "        # possible_relation_props=pos_rel,\n",
-    "        # possible_entity_props=pos_ent,\n",
+    "        possible_entity_props=pos_ent,\n",
     "        kg_validation_schema=validation_schema,\n",
     "        max_triplets_per_chunk=10,\n",
     "        num_workers=4,\n",
@@ -450,6 +559,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"What sections are mentioned in section § 240.13a-15?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "§ 230.503 and § 229.1101\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# oprompt = \"A section an alphanumeric string with punctuation proceeded by '§' (e.g. § 230.503, § 240.13a-15). Return only sections in the context.\"\n",
+    "# oprompt = \"A section is number proceeded by '§' with a decimal point (e.g. § 230.503, § 240.13a-15). Return only sections in the context.\"\n",
+    "oprompt = \"What sections (e.g. § 230.503, § 240.13a-15) are mentioned in the context? Return only sections in the context.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oresponse = llm.complete(oprompt+\"\\n\\nCONTEXT:\\n\"+doc_linked[3].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the sections mentioned in the context:\n",
+      "\n",
+      "* § 229.1101\n",
+      "* § 239.24\n",
+      "* § 240.3b-4\n",
+      "* § 270.30a-2\n",
+      "* § 274.5\n",
+      "* § 781 (15 U.S.C.)\n",
+      "* § 13(a) of the Act (15 U.S.C. 78m(a))\n",
+      "* § 15(d) of the Act (15 U.S.C. 78o(d))\n",
+      "* § 4(2) of the Investment Company Act of 1940 (15 U.S.C. 80a-4(2))\n",
+      "* § 8 of the Investment Company Act of 1940 (15 U.S.C. 80a-8)\n",
+      "* Release No. 34-55929\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(oresponse.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "def get_linked_sections(doc):\n",
+    "    pattern = r'\\d+\\.\\d+[a-zA-Z-]*\\d*'\n",
+    "    # pattern = r'§\\s?\\d+\\.\\d+[a-zA-Z-]*\\d*'\n",
+    "    linked_sections = re.findall(pattern, doc.text)\n",
+    "    return linked_sections\n",
+    "\n",
+    "for doc in doc_linked:\n",
+    "    print(get_linked_sections(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(doc_linked[5].metadata['section'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(doc_linked[5].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -464,7 +692,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text=\"\"\"registered on Form N-5 (§§ 239.24 and 274.5 of this chapter), or a unit investment trust as defined in section 4(2) 240.3b-4 of the Information \"\"\"\n",
+    "re.findall(pattern, doc_linked[3].text)\n"
+   ]
   },
   {
    "cell_type": "code",
