--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,20 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LLMMetadata(context_window=128000, num_output=256, is_chat_model=True, is_function_calling_model=False, model_name='llama3.1', system_role=<MessageRole.SYSTEM: 'system'>)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from llama_index.llms.ollama import Ollama\n",
@@ -228,20 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, dotenv\n",
     "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
@@ -250,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,41 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/pydantic/_internal/_fields.py:161: UserWarning: Field \"model_id\" has conflict with protected namespace \"model_\".\n",
-      "\n",
-      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading embed model...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b66125ed73864eec9fe35caa60dd5dc0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -365,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,50 +344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Received notification from DBMS server: {severity: WARNING} {code: Neo.ClientNotification.Statement.FeatureDeprecationWarning} {category: DEPRECATION} {title: This feature is deprecated and will be removed in future versions.} {description: The procedure has a deprecated field. ('config' used by 'apoc.meta.graphSample' is deprecated.)} {position: line: 1, column: 1, offset: 0} for query: \"CALL apoc.meta.graphSample() YIELD nodes, relationships RETURN nodes, [rel in relationships | {name:apoc.any.property(rel, 'type'), count: apoc.any.property(rel, 'count')}] AS relationships\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading data to vector store...\n",
-      "    building from scratch...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c500d205ca754d2bad85b0e0522af016",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Extracting paths from text with schema: 100%|██████████| 49/49 [03:55<00:00,  4.80s/it]\n",
-      "Generating embeddings:   0%|          | 0/5 [00:00<?, ?it/s]We detected that you are passing `past_key_values` as a tuple and this is deprecated and will be removed in v4.43. Please use an appropriate `Cache` class (https://huggingface.co/docs/transformers/v4.41.3/en/internal/generation_utils#transformers.Cache)\n",
-      "Generating embeddings: 100%|██████████| 5/5 [00:04<00:00,  1.25it/s]\n",
-      "Generating embeddings: 100%|██████████| 7/7 [00:01<00:00,  3.67it/s]\n",
-      "Received notification from DBMS server: {severity: WARNING} {code: Neo.ClientNotification.Statement.FeatureDeprecationWarning} {category: DEPRECATION} {title: This feature is deprecated and will be removed in future versions.} {description: The procedure has a deprecated field. ('config' used by 'apoc.meta.graphSample' is deprecated.)} {position: line: 1, column: 1, offset: 0} for query: \"CALL apoc.meta.graphSample() YIELD nodes, relationships RETURN nodes, [rel in relationships | {name:apoc.any.property(rel, 'type'), count: apoc.any.property(rel, 'count')}] AS relationships\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('loading data to vector store...')\n",
     "persist_dir = \"/workspace/data/storage/sec_baseline\"\n",
@@ -455,50 +360,44 @@
     "else:\n",
     "    print(f'    building from scratch...')\n",
     "    documents = [Document(text=t, \n",
-    "                          text_template = '{content}',\n",
+    "                          text_template = '{metadata_str}\\n\\n{content}',\n",
     "                        #   text_template = '{metadata_str}\\n\\nCONTEXT:\\n{content}',\n",
     "                          metadata=get_metadata(m, metadata={\"section\":None, \"description\":None})) \\\n",
     "                            for m,t in data.items()]\n",
     "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
-    "    # extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 13d-3(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities 'RULES, REGULATIONS' and the relationships 'REFERENCED_BY, REFERS_TO'.\"\n",
-    "    # extract_prompt = \"Many of the sections (e.g. § 230.503, § 240.13a-15) and rules (e.g. Rule 13d-3(a), Rule 13d-1(f)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships, focusing on the sections mentioned in the text.\"\n",
-    "    # extract_prompt = \"A section in the Many of the sections (e.g. 230.503, 240.13a-15) in the text mention other sections. Extract up to {max_triplets_per_chunk} section mentiones per chunck. Only extract the sections mentioned in the text.\"\n",
-    "    # extract_prompt = \"A section, rule, or act in Title 17 rulebook is an alphaumeric string with punctuation (e.g. 230.503, 240.13a-15, Rule 13d-1(f), Investment Company Act of 1940 (15 U.S.C. 80a-8)). Many of the sections in the text mention other sections, rules, or acts. Extract up to {max_triplets_per_chunk} section mentiones knowledge triples per chunk. Only extract the sections, rules, and acts mentioned in the context.\"\n",
-    "    extract_prompt = \"What sections (e.g. § 230.503, § 240.13a-15) are mentioned in the content? Return only sections in the context.\"\n",
     "    \n",
-    "    import random\n",
-    "    from llama_index.core import PropertyGraphIndex\n",
-    "    linked = ['§ 240.13a-15',\n",
-    "    '§ 229.1101',\n",
-    "    '§ 239.24',\n",
-    "    '§ 274.5',\n",
-    "    '§ 270.30',\n",
-    "    '§ 240.13h-1',\n",
-    "    '§ 242.600']\n",
-    "    doc_linked = []\n",
-    "    for doc in documents:\n",
-    "        rule, rule_description = get_rule_and_description(doc)\n",
-    "        for linked_rule in linked:\n",
-    "            if rule in linked_rule:\n",
-    "                doc_linked.append(doc)\n",
-    "    doc_linked+=random.sample(documents, 3)\n",
+    "    # import random\n",
+    "    # linked = ['§ 240.13a-15',\n",
+    "    # '§ 229.1101',\n",
+    "    # '§ 239.24',\n",
+    "    # '§ 274.5',\n",
+    "    # '§ 270.30',\n",
+    "    # '§ 240.13h-1',\n",
+    "    # '§ 242.600']\n",
+    "    # doc_linked = []\n",
+    "    # for doc in documents:\n",
+    "    #     rule, rule_description = get_rule_and_description(doc)\n",
+    "    #     for linked_rule in linked:\n",
+    "    #         if rule in linked_rule:\n",
+    "    #             doc_linked.append(doc)\n",
+    "    # doc_linked+=random.sample(documents, 3)\n",
     "\n",
     "    NUMBER_OF_ARTICLES = 1090\n",
     "    pos_ent, pos_rel = [], []\n",
-    "    for doc in doc_linked:\n",
+    "    for doc in documents:\n",
     "        section = get_linked_sections(doc)\n",
     "        pos_ent+=section\n",
-    "        # rule, rule_description = get_rule_and_description(doc)\n",
-    "        # pos_ent.append(rule)\n",
-    "        # pos_rel.append(rule_description)\n",
     "\n",
+    "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content and the relation to the section in the metadata.\"\n",
+    "    extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content.\"\n",
+    "    \n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
     "        extract_prompt=extract_prompt,\n",
     "        possible_entities=entities,\n",
     "        possible_relations=relations,\n",
     "        # possible_relation_props=pos_rel,\n",
-    "        possible_entity_props=pos_ent,\n",
+    "        # possible_entity_props=pos_ent,\n",
     "        kg_validation_schema=validation_schema,\n",
     "        max_triplets_per_chunk=10,\n",
     "        num_workers=4,\n",
@@ -536,7 +435,8 @@
     "        **config\n",
     "    )\n",
     "\n",
-    "    vector_index = PropertyGraphIndex.from_documents(doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
+    "    from llama_index.core import PropertyGraphIndex\n",
+    "    vector_index = PropertyGraphIndex.from_documents(documents, #doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
     "                                                     llm=llm,\n",
     "                                                     property_graph_store=graph_store, \n",
     "                                                     embed_model=embed_model, \n",
@@ -559,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,24 +468,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "§ 230.503 and § 229.1101\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# ['229.1101', '239.24', '274.5', '240.3b-4', '270.30a-2']\n",
     "print(response.response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,29 +498,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here are the sections mentioned in the context:\n",
-      "\n",
-      "* § 229.1101\n",
-      "* § 239.24\n",
-      "* § 240.3b-4\n",
-      "* § 270.30a-2\n",
-      "* § 274.5\n",
-      "* § 781 (15 U.S.C.)\n",
-      "* § 13(a) of the Act (15 U.S.C. 78m(a))\n",
-      "* § 15(d) of the Act (15 U.S.C. 78o(d))\n",
-      "* § 4(2) of the Investment Company Act of 1940 (15 U.S.C. 80a-4(2))\n",
-      "* § 8 of the Investment Company Act of 1940 (15 U.S.C. 80a-8)\n",
-      "* Release No. 34-55929\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(oresponse.text)"
    ]
